2002-01-12  Bruno Haible  <bruno@clisp.org>

	* gettext.h (gettext_noop): Remove the parentheses around the
	expansion.

2002-01-10  Bruno Haible  <bruno@clisp.org>

	* liballoca.h: Fix typo.

2002-01-10  Andrew Zabolotny  <zap@cobra.ru>
	    Bruno Haible  <bruno@clisp.org>

	* localcharset.c: Rework OS/2 support.
	* config.charset: Add OS/2 support.

2002-01-09  Bruno Haible  <bruno@clisp.org>

	* setenv.h: Make it possible to include this file from C++.
	* xsetenv.h: Likewise.

2002-01-05  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (libgettextlib_la_LDFLAGS): Add -lc. Needed on AIX.

2002-01-05  Bruno Haible  <bruno@clisp.org>

	* wait-process.c (WIFSIGNALED): Make it return false when WIFSTOPPED
	returns true.
	(wait_subprocess): Use WIFSIGNALED instead of WCOREDUMP || WTERMSIG.
	On AIX and OSF/1, WTERMSIG has a negative value if !WIFSIGNALED. And
	WCOREDUMP is a BSDism, not POSIX.

2001-12-23  Bruno Haible  <bruno@clisp.org>

	* xsetenv.h: New file.
	* xsetenv.c: New file.
	* Makefile.am (libgettextlib_la_SOURCES): Add them.
	* classpath.c (set_classpath): Use xsetenv instead of setenv.
	(reset_classpath): Likewise.
	* javacomp.c (compile_java_class): Likewise.
	* javaexec.c (execute_java_class): Likewise.

2001-12-23  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (libgettextlib_la_SOURCES): Add the contents of
	libgettextlib_la_HEADER, except liballoca.h.
	(LIBADD_SOURCE): Add the contents of LIBADD_HEADER, plus liballoca.h.
	(UNUSED_SOURCE): Add the contents of UNUSED_HEADER.
	(libgettextlib_la_HEADER, LIBADD_HEADER, UNUSED_HEADER): Remove
	variables.
	(noinst_HEADERS): Update.

2001-12-21  Bruno Haible  <bruno@clisp.org>

	* localcharset.c (ISSLASH): Provide definition for DOS-like systems.
	* basename.c (FILESYSTEM_PREFIX_LEN, ISSLASH): Likewise.

2001-12-22  Bruno Haible  <bruno@clisp.org>

	* binary-io.h: New file, extracted from system.h.
	* exit.h: New file, extracted from system.h.
	* liballoca.h: New file, extracted from system.h.